<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">




            <LinearLayout
                android:id="@+id/ll_pricing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_app_margin_large"
                android:background="@drawable/bg_rounded_layout"
                android:orientation="vertical"
                android:padding="@dimen/dimen_app_margin_large">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pricing_policy_methods"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_ll_inside_text">


                        <CheckBox
                            android:id="@+id/checkBox1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_ll_inside_text"
                            android:background="@drawable/bg_rounded_layout"
                            android:text="@string/allow_request_from_customer" />

                        <CheckBox
                            android:id="@+id/checkBox2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_ll_inside_text"
                            android:background="@drawable/bg_rounded_layout"
                            android:text="@string/negotiable_price" />

                        <CheckBox
                            android:id="@+id/checkBox3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_rounded_layout"
                            android:text="@string/complimentary" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen_ll_inside_text">

                        <CheckBox
                            android:id="@+id/checkBox4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_ll_inside_text"
                            android:background="@drawable/bg_rounded_layout"
                            android:text="@string/fixed_price" />

                        <CheckBox
                            android:id="@+id/checkBox5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_rounded_layout"
                            android:text="@string/best_price" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/sale_price" />

                    <EditText
                        android:id="@+id/et_price"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:hint="@string/insert_price"
                        android:padding="@dimen/dimen_ll_inside_text" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_app_margin_large"
                android:background="@drawable/bg_rounded_layout"
                android:orientation="vertical"
                android:padding="@dimen/dimen_app_margin_large"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_location"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_locate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:padding="@dimen/dimen_app_margin_large"
                    android:text="@string/product_location"
                    android:textSize="16sp"
                    android:drawableLeft="@drawable/locate"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_delivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/choose_your_delivery_method"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/customer_to_pickup" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/owner_will_deliver" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/free_of_charge" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/i_will_charge_delivery_fees" />

                </RadioGroup>

                <EditText
                    android:id="@+id/et_delivery_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:autofillHints=""
                    android:background="@drawable/border"
                    android:hint="@string/insert_price"
                    android:padding="5dp" />


                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/third_party_delivery" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/delivery_companies" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        tools:ignore="UselessParent">

                        <Spinner
                            android:id="@+id/spinner_company"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="#696969"
                            android:overlapAnchor="true"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </LinearLayout>

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/karwaty_pickup_amp_drop_hub" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pickup_amp_drop_off_points" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        tools:ignore="UselessParent">

                        <Spinner
                            android:id="@+id/spinner_points"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="#696969"
                            android:overlapAnchor="true"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_remarks"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_english_remark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border"
                    android:hint="@string/remarks_in_english"
                    android:padding="5dp" />


                <EditText
                    android:id="@+id/et_arabic_remark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/border"
                    android:hint="@string/remarks_in_arabic"
                    android:importantForAutofill="no"
                    android:padding="5dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_post_appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_appearance"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/post_appearance_appearance_for_customer" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:text="@string/_90_days" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/select_your_post_appearance_preference" />


                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:hint="@string/_60_days"
                        android:importantForAutofill="no" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/when_is_your_available" />


                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:hint="@string/from_date"
                        android:importantForAutofill="no" />


                </LinearLayout>


            </LinearLayout>


            <TextView

                android:id="@+id/tv_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_subs"
                android:gravity="center"
                android:padding="9dp"
                android:text="@string/next"
                android:textColor="#fff"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>